0.78
        Fix various POD errors and add POD testing (#45)

0.77    24 December 2008
        Complete support for store->list_metadata_by_type, which
          returns a list of all the metadata values
        Add store->list_metadata_names, which will tell you all the
          different metadata types (names)
        write_node: return the version of the node that was just committed,
        if successful
        Don't write out a new version of a node if the checksum is the
        same as the one already stored (#43)
        t/400_upgrade.t: skip all tests correctly if no backends
        configured (#44)
        Configure charset correctly when passing in an existing $dbh (#24)

0.76    13 July 2008
        Really add missing prereq of DBI!
        Add testing of database schema upgrades (#32)
        Move to new schema version 10, including some missing indexes
          and support for verified flags. Note that
          the code using this column has not yet been written (#25, #34).
        Changed Wiki::Toolkit::Feed::Listing to use metadata_was instead of
          metadata_wasnt, for efficiency reasons.
        list_dangling_links, list_backlinks: don't return internal links
          that are from a node which does not exist. This works around
          database inconsistencies (introduced by manual deletion of nodes)
          which should be fixed by adding constraints to the database (see #38)

0.75	11 May 2008
        Added support for selecting versions by moderation status (see
          OpenGuides ticket #142).
        Added "new_only" parameter to ->list_recent_changes, so you can ask
          for e.g. all pages added in the last week.  This involved a bit of
          a rewrite of ->list_recent_changes, so please keep an eye out for
          any bugs that may have been introduced (I'm not convinced the test
          suite covered everything it should have).
        Fix some badly-formatted POD documentation which accidentally included